Use selected java version when starting server process